syntax = "proto3";

import "google/protobuf/timestamp.proto";

//csharp_namespace needs to be written for each system
option csharp_namespace = "Protos.v1.Base";

package loc;

message Path {    
    repeated Link links = 1;
    // The total distance of the path in meter
    double dist = 2;
    // The total duration of the path in msec
    int64 duration = 3;
}

message Link {
    int64 id = 1;
    double length = 2;
    int64 duration = 3;
    repeated LngLat lnglats = 4;
}

message Loc {
    LngLat lnglat = 1;
    float accuracy = 2;
    // Current heading value from 0 to 360 degrees
    float heading = 3;
    // Current speed in meter per second
    float speed = 4;    
    string get_date = 5;
}

message LngLat {
    double lng = 1;
    double lat = 2;
}